@@ -1,3 +1,11 @@
+2007-08-13  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* flumotion/component/dvb/dvb.py (DVB.get_pipeline_string,
+	  _bus_message_received_cb):
+	Set check-imperfect-timestamp to True not leave it in thin air!
+	Add message when we receive disconts from decoders that are
+	> 10 seconds or negative.
+
 2007-08-10  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* flumotion/component/dvb/dvb.py (DVB.get_pipeline_string,
